<resources>
    <string name="app_name">AndroidDev</string>
    <string name="invalid_name">Please enter valid name</string>
    <string name="invalid_number">Please enter valid number.</string>
    <string name="invalid_email">Please enter valid mail</string>
    <string name="invalid_website">"Please enter valid website "</string>
    <string name="invalid_password">Enter valid password</string>
    <string name="invalid_confirmation">Enter valid confirmation</string>
    <string name="list_view_example">List View Example</string>
    <string name="todo">TODO</string>
    <string name="power_workshop">Power Workshop</string>
    <string name="list_view">list view</string>
    <string name="relative_layout">Relative layout</string>
    <string name="linear_layout">linear layout</string>
    <string name="power_workshop_2021">Power Workshop 2021</string>
    <string name="frame_layout">frame layout</string>
    <string name="form_validation">FORM VALIDATION</string>
    <string name="table_layout">TABLE LAYOUT</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="basic_android_development">Basic Android Development</string>
    <string name="linearlayout">Linear Layout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="recycler_view">RECYCLER VIEW</string>
</resources>
